# clion

./: README.md
client/: package-lock.json
server/: .gitignore  Cargo.toml
server/src/: main.rs
server/src/api/: mod.rs
server/src/api/v1/: auth.rs
server/src/config/: .env
server/src/migrations/: 20241119093733_create_user_table.sql  20241119105259_create_habbit_table.sql  achievements.sql  categories.sql  habit_logs.sql  reminders.sql
server/src/models/: mod.rs  users.rs
server/src/services/: login.rs  mod.rs  register.rs
server/src/utils/: auth.rs  mod.rs
