[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
jsonwebtoken = "9.3.0"
bcrypt = "0.16.0"
serde = "1.0.215"
chrono = "0.4.38"
