[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]

actix-web = "4.9.0"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
jsonwebtoken = "9.3.0"
bcrypt = "0.16.0"
sqlx = { version = "0.8", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "uuid",
    "time",
] }

uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3.37", features = ["serde"] }
